objects/vlocity_cmt__PromotionItem__c.object
<CustomObject>
    <description>Promotions can be identified as applicable to specific products or services or may automatically add certain products or services to a quote/order when the promotion is applied. This represents the product or service that is applicable or automatically included.</description>
    <fields>
        <fullName>vlocity_cmt__ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Add/Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                    <isActive>false</isActive>
                    <label>Delete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardinalityCheckScope__c</fullName>
        <label>Cardinality Check Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Context Product Scope</fullName>
                </value>
                <value>
                    <fullName>Cart Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Discount Items (Category)</relationshipLabel>
        <relationshipName>DiscountItemsCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextEntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Rule</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>Promotion Items</relationshipLabel>
        <relationshipName>PromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextProductGroupKey__c</fullName>
        <description>Version Group Key of Context Product</description>
        <formula>vlocity_cmt__ContextProductId__r.vlocity_cmt__GlobalGroupKey__c</formula>
        <inlineHelpText>Version Group Key of Context Product</inlineHelpText>
        <label>Context Product Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Items (Context Product Id)</relationshipLabel>
        <relationshipName>ContextPromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalGroupKey__c</fullName>
        <description>Same across the same group of Promotion Items. Used to tie a group Promotion Items together.</description>
        <label>Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this PromotionItem. Used to identify the PromotionItem across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique PromotionItem identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsUndoable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Undoable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MinQuantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Items (Offer Product Id)</relationshipLabel>
        <relationshipName>OfferPromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferProductGroupKey__c</fullName>
        <description>Version Group Key of Offer Product</description>
        <formula>vlocity_cmt__OfferId__r.vlocity_cmt__GlobalGroupKey__c</formula>
        <inlineHelpText>Version Group Key of Offer Product</inlineHelpText>
        <label>Offer Product Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyGlobalKeyPath__c</fullName>
        <description>This field is similar to Product Hierarchy Path but keeps global keys instead of Ids.</description>
        <label>Product Hierarchy Global Key Path</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyGroupKeyPath__c</fullName>
        <description>Stores the resulting string obtained by replacing every Product Id in the Product Hierarchy Path with its Version Group key</description>
        <label>Product Hierarchy Group Key Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyPath__c</fullName>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Items</relationshipLabel>
        <relationshipName>PromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Promotion Items</relationshipLabel>
        <relationshipName>PromotionItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UndoableMessage__c</fullName>
        <label>Undoable Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UpdateScope__c</fullName>
        <description>When the Action on a Promotion Item is update, the Update Scope defines the way the update happens to existing cart items. Update Item Only means the Promotion Item adjustments are only applied to the specified item, not to its child items. Update Item and Child Items means the Promotion Item adjustments are applied to this item and its child items. Using Update Item Only allows adjusting the child items under the Promotion Item when the Action is Add, but not applying those child item adjustments when the Action is update.</description>
        <label>Update Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update Item Only</fullName>
                    <default>true</default>
                    <label>Update Item Only</label>
                </value>
                <value>
                    <fullName>Update Item and Child Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__Default_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__Quantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Default_greater_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MinQuantity__c  &gt;  vlocity_cmt__Quantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Default_less_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__Quantity__c  &gt;  vlocity_cmt__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__EffectiveUntil_Greater_EffectiveFrom</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__EffectiveFromDate__c  &gt;  vlocity_cmt__EffectiveUntilDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EffectiveUntilDate__c</errorDisplayField>
        <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Max_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MaxQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Max_less_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MaxQuantity__c  &lt;  vlocity_cmt__MinQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Min_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MinQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Min_greater_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MinQuantity__c  &gt;  vlocity_cmt__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
</CustomObject>